#804 - fixed the wrapping issue between the radio and label

--- a/public/stylesheets/winnow.css
+++ b/public/stylesheets/winnow.css
@@ -1652,6 +1652,10 @@ a.bookmarklet:hover {
 	vertical-align: middle;
 }
 
+.tag .extended .sidebar .actions .state span {
+	white-space: nowrap;
+}
+
 .tag .extended .sidebar .actions .state label {
 	margin-right: 1.5em;
 }
